--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
     "test": "jest"
   },
   "dependencies": {
+    "Validator": "^1.1.4",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "jest": "^26.6.3",
-    "nodemon": "^2.0.7",
-    "supertest": "^6.1.3"
-  }
+    "jest": "^27.3.0",
+    "nodemon": "^2.0.13",
+    "supertest": "^6.1.6"
+  },
+  "repository": "https://github.com/anonyblast/working-with-middlewares.git",
+  "author": "nome <gustavoiafelix@gmail.com>"
 }
